# fingerprints

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basic.rs  mdl_codelength.rs  pitman_yor_zipf.rs  pml_uniform.rs  unseen_report.rs  vocab_coverage.rs  vv_bounds.rs
proptest-regressions/: lib.txt
src/: coverage.rs  lib.rs  pml.rs  vv.rs
